updating undo and redo functions

--- a/canvas/angularndraw.html
+++ b/canvas/angularndraw.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta http-equiv = 'text/css' charset='utf-8'></meta>
+<link rel='stylesheet' type='text/css' href='./css/style.css'></link>
 <script src='./webpainterJS/paintmain.js'></script>
 </head>
 <body>
 angular.js와 캔버스 기능 등을 사용해서 그림 그리기 실험<br />
 <div>
-	<canvas id = 'c1' width=500 height=500 style='border: 1px solid gray;background:#ddaabb;'></canvas>
+	<!--<canvas id = 'c1' width=500 height=500 style='border: 1px solid gray;background:#ddaabb;'></canvas>-->
 	<canvas id = 'c2' width=500 height=500 style='border: 1px solid gray;'></canvas>
-	<div id='tools' style='vertical-align:top;border:1px solid red;display:inline;display:inline-block;'><p>도구들</p>
-		<!--<div id = 'colorpick' style='border:1px dotted green;'></div>-->
+	<div id='tools'><p>도구들</p>
 	</div>
 	<p id = 'coords'>커서 좌표</p>
 </div>
