--- a/canvas/angularndraw.html
+++ b/canvas/angularndraw.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 angular.js와 캔버스 기능 등을 사용해서 그림 그리기 실험<br />
-<div>
+<div style='position:relative;'>
 	<!--<canvas id = 'c1' width=500 height=500 style='border: 1px solid gray;background:#ddaabb;'></canvas>-->
 	<canvas id = 'c2' width=500 height=500 style='border: 1px solid gray;'></canvas>
 	<div id='tools'><p>도구들</p>
