--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -6,7 +6,7 @@
 <script src='./webpainterJS/paintmain.js'></script>
 </head>
 <body>
-angular.js와 캔버스 기능 등을 사용해서 그림 그리기 실험<br />
+캔버스 기능을 사용해서 그림 그리기 실험<br />
 <div style='position:relative;'>
 	<!--<canvas id = 'c1' width=500 height=500 style='border: 1px solid gray;background:#ddaabb;'></canvas>-->
 	<canvas id = 'c2' width=500 height=500 style='border: 1px solid gray;'></canvas>
