--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -5,7 +5,7 @@
 <link rel='stylesheet' type='text/css' href='./css/style.css'></link>
 <script src='./webpainterJS/paintmain.js'></script>
 </head>
-<body>
+<body style="margin: 0;">
 캔버스 기능을 사용해서 그림 그리기 실험<br />
 <div style='position:relative;'>
 	<!--<canvas id = 'c1' width=500 height=500 style='border: 1px solid gray;background:#ddaabb;'></canvas>-->
