layer기능 기초(레이어 추가하기, 추가한 레이어 보이기)

--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<title>캔버스</title>
 <meta http-equiv = 'text/css' charset='utf-8'></meta>
 <link rel='stylesheet' type='text/css' href='./css/style.css'></link>
 <script src='./webpainterJS/paintmain.js'></script>
@@ -12,6 +13,7 @@
 	<canvas id = 'c2' width=500 height=500 style='border: 1px solid gray;'></canvas>
 	<div id='tools'><p>도구들</p>
 	</div>
+	<div id="under_tools"></div>
 	<p id = 'coords'>커서 좌표</p>
 </div>
 </body>
