저장 기본기능(레이어를 하나로 합치는 것) 추가

--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -14,7 +14,8 @@
 	<div id='tools'><p>도구들</p>
 	</div>
 	<div id="under_tools"></div>
-	<p id = 'coords'>커서 좌표</p>
+	<!-- <p id = 'coords'>커서 좌표</p> -->
+	<button onclick="saveImage()">저장</button>
 </div>
 </body>
 </html>
