일단 setPainter로 그리도록 수정

--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -5,6 +5,12 @@
 <meta http-equiv = 'text/css' charset='utf-8'></meta>
 <link rel='stylesheet' type='text/css' href='./css/style.css'></link>
 <script src='./webpainterJS/paintmain.js'></script>
+<script>
+	//본편
+	window.onload = function() {
+		setPainter('#c2');
+	};
+</script>
 </head>
 <body style="margin: 0;">
 캔버스 기능을 사용해서 그림 그리기 실험<br />
