toolbox 및 layer selector 변경

--- a/canvas/draw.html
+++ b/canvas/draw.html
@@ -26,7 +26,7 @@
 	<canvas id = 'testCanvas' width=500 height=500 style='border: 1px solid gray;'></canvas>
 	<div id='tools'><p>도구들</p>
 	</div>
-	<div id="under_tools"></div>
+	<div id="layers"></div>
 	<!-- <p id = 'coords'>커서 좌표</p> -->
 	<button onclick="saveImage()">저장</button>
 </div>
